# QES_QUANTUM_ENCRYPTION_SYSTEM

./: AI_CONTEXT.md  CHANGELOG.md  PATCH_NOTES.md  README.md  ROADMAP.md  SECURITY_MODEL.md  TODO_NEXT.md
.github/workflows/: build-android-apk.yml  qes-cloud-patcher-launcher.yml  qes-github-only-patcher.yml
android-app/: settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/org/zero/qes/: MainActivity.java  MainActivity.kt  (+3 more)
android-app/app/src/main/res/values/: strings.xml  styles.xml
docs/: BUILD_ANDROID.md  QES_ANDROID_ARCHITECTURE.md  QES_APP_ROADMAP.md  worklog-qes-work-2-metaqes7.md  worklog-qes-work-3-fix-rust-crate-name.md
qes-workspaces/000_current_snapshot/: FILES.md  README.md  SNAPSHOT.md
qes-workspaces/001_metaqes7/: CONNECTOR.md  PATCH_PLAN.md
qes-workspaces/001_metaqes7/patches/: 001_cipher_metadata.patch.md  002_cargo_crate_name.patch.md  003_fast_tests.patch.md  004_ascii_hidden_transition.patch.md
qes-workspaces/999_final/: FINAL_CONNECTOR.md
rust-core/: .gitignore  Cargo.toml  QES_ARCHITEKTURA_UZIVATELSKY_MANUAL.md  QES_TAILS_CLI.md  QES_V8_ARCHITEKTURA.md  README.md  run_mobile_server.sh  run_tests.sh
rust-core/src/: android_ffi.rs  ascii_art.rs  capsule.rs  carrier.rs  cipher.rs  kdf.rs  lib.rs  main.rs  route.rs  server.rs
rust-core/static/: app.js  index.html  style.css
rust-core/tests/: qcs_roundtrip.rs  qes_capsule.rs  stream_block_roundtrip.rs
scripts/: build_android_rust.sh  build_apk.sh  qes_project_status.sh
tools/: qes_patch_runner.py
