[package]
name = "qes_core"
version = "0.8.1"
edition = "2021"
description = "QES Quantum Encryption System core library, CLI prototype and Android JNI bridge"
license = "UNLICENSED"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "qes_quantum_encryption_system"
crate-type = ["rlib", "cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
